--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  color: #111;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-size: 16px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: #ffffff;
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+header {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-content: center;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 1rem 5rem;
+  background: #f3f3f3;
+  margin-bottom: 2rem;
+  box-shadow: 0 1px 11px 3px rgb(0 0 0/21%);
 }
 
-.App-link {
-  color: #61dafb;
+header a {
+  color: #ad343e;
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: bold;
+  display: block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.itemsTienda {
+  width: 100%;
+  overflow: hidden;
+  padding: 25px 15px;
+  border-bottom: #d8dee6 2px solid;
 }
+
+
+
+
+
